--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <td>Home</td>
         <td> <a href="">About Us</a></td>
         <td>Net Banking</td>
-        <td> <a href="
-https://github.com/lakshibhati/bank2/blob/841f89992d62ad928c93757566cd8bac9c2b4ee0/services.html">Services</a></td>
+        <td> <a href="services.html">Services</a></td>
         <td>Contact Us</td>
       </tr>
     </table>
