--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <h2>service at your door steps</h2>
     <table>
       <tr>
-        <td>Home</td>
-        <td> <a href="">About Us</a></td>
-        <td>Net Banking</td>
+        <td><a href="index.html">Home</a></td>
+        <td> <a href="aboutus.html">About Us</a></td>
+        <td><a href="netbanking.html">Net Banking</a></td>
         <td> <a href="services.html">Services</a></td>
-        <td>Contact Us</td>
+        <td><a href="contact.html">Contact Us</a></td>
       </tr>
     </table>
   </body>
